--- a/list functions.ipynb
+++ b/list functions.ipynb
@@ -1122,9 +1122,10 @@
    ],
    "source": [
     "l=[1,2,3,3,3,4,5,6,3,3,7,8]\n",
-    "for i in l:\n",
+    "for i in l:#7\n",
     "    if i==3:\n",
     "        l.remove(3)\n",
+    "        #[1,2,4,5,6,3,3,7,8]\n",
     "print(l)"
    ]
   },
@@ -1156,8 +1157,550 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a6a1d23f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,3,3,4,5,6,3,3,7,8]\n",
+    "for i in l[::-1]:\n",
+    "    if i==3:\n",
+    "        l.remove(3)\n",
+    "        #[1,2,4,5,6,3,3,7,8]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b6629ada",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id-l= 1719408193344\n",
+      "id-p= 1719408193344\n",
+      "id-m= 1719408193088\n",
+      "id-n= 1719408190080\n",
+      "id-q= 1719408192256\n"
+     ]
+    }
+   ],
+   "source": [
+    "from copy import deepcopy\n",
+    "k=[4000, 5000, 6000]\n",
+    "l=[1000,2000,3000,k,7000,8000,\"python\",(100,200,300)]\n",
+    "p=l\n",
+    "m=l.copy()\n",
+    "n=l[::]\n",
+    "q=deepcopy(l)\n",
+    "m[0]=10\n",
+    "print(\"id-l=\", id(l))\n",
+    "print(\"id-p=\", id(p))\n",
+    "print(\"id-m=\", id(m))\n",
+    "print(\"id-n=\", id(n))\n",
+    "print(\"id-q=\", id(q))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "01a9ebb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id-l= 1719408199168\n",
+      "id-p= 1719408199168\n",
+      "id-m= 1719408199360\n",
+      "id-n= 1719408199296\n",
+      "id-q= 1719408198464\n",
+      "id-l--1 1719408081344\n",
+      "id-m--1 1719408081344\n",
+      "id-n--1 1719408081344\n",
+      "id-q--1 1719408081344\n"
+     ]
+    }
+   ],
+   "source": [
+    "from copy import deepcopy\n",
+    "k=[4000, 5000, 6000]\n",
+    "l=[1000,2000,3000,k,7000,8000,\"python\",(100,200,300)]\n",
+    "p=l\n",
+    "m=l.copy()\n",
+    "n=l[::]\n",
+    "q=deepcopy(l)\n",
+    "m[0]=10\n",
+    "print(\"id-l=\", id(l))\n",
+    "print(\"id-p=\", id(p))\n",
+    "print(\"id-m=\", id(m))\n",
+    "print(\"id-n=\", id(n))\n",
+    "print(\"id-q=\", id(q))\n",
+    "print(\"id-l--1\", id(l[-1]))\n",
+    "print(\"id-m--1\", id(m[-1]))\n",
+    "print(\"id-n--1\", id(n[-1]))\n",
+    "print(\"id-q--1\", id(q[-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "07659ee8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id-l= 1719408171200\n",
+      "id-p= 1719408171200\n",
+      "id-m= 1719408171584\n",
+      "id-n= 1719408171008\n",
+      "id-q= 1719408170880\n",
+      "id-l--1 1719408082304\n",
+      "id-m--1 1719408082304\n",
+      "id-n--1 1719408082304\n",
+      "id-q--1 1719408082304\n",
+      "id-l-3 1719408170496\n",
+      "id-m-3 1719408170496\n",
+      "id-n-3 1719408170496\n",
+      "id-q-3 1719408199360\n"
+     ]
+    }
+   ],
+   "source": [
+    "from copy import deepcopy\n",
+    "k=[4000, 5000, 6000]\n",
+    "l=[1000,2000,3000,k,7000,8000,\"python\",(100,200,300)]\n",
+    "p=l\n",
+    "m=l.copy()\n",
+    "n=l[::]\n",
+    "q=deepcopy(l)\n",
+    "m[0]=10\n",
+    "print(\"id-l=\", id(l))\n",
+    "print(\"id-p=\", id(p))\n",
+    "print(\"id-m=\", id(m))\n",
+    "print(\"id-n=\", id(n))\n",
+    "print(\"id-q=\", id(q))\n",
+    "print(\"id-l--1\", id(l[-1]))\n",
+    "print(\"id-m--1\", id(m[-1]))\n",
+    "print(\"id-n--1\", id(n[-1]))\n",
+    "print(\"id-q--1\", id(q[-1]))\n",
+    "\n",
+    "print(\"id-l-3\", id(l[3]))\n",
+    "print(\"id-m-3\", id(m[3]))\n",
+    "print(\"id-n-3\", id(n[3]))\n",
+    "print(\"id-q-3\", id(q[3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "efadab16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1719420753584\n",
+      "1719420753584\n",
+      "l= [1, [101, 5000], 7000, 'python', (100, 200, 300)]\n",
+      "m= [10, [101, 5000], 7000, 'python', (100, 200, 300)]\n",
+      "n= [1000, [101, 5000], 7000, 'python', (100, 200, 300)]\n",
+      "p= [1, [101, 5000], 7000, 'python', (100, 200, 300)]\n",
+      "q= [1000, [4000, 5000], 7000, 'python', (100, 200, 300)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from copy import deepcopy\n",
+    "k=[4000, 5000]\n",
+    "l=[1000,k,7000,\"python\",(100,200,300)]\n",
+    "p=l\n",
+    "m=l.copy()\n",
+    "n=l[::]\n",
+    "q=deepcopy(l)\n",
+    "print(id(k[0]))\n",
+    "print(id(q[1][0]))\n",
+    "l[0]=1\n",
+    "m[0]=10\n",
+    "k[0]=101\n",
+    "print(\"l=\",l)\n",
+    "print(\"m=\",m)\n",
+    "print(\"n=\",n)\n",
+    "print(\"p=\",p)\n",
+    "print(\"q=\", q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6f68636a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,3,3,4,5,6,3,3,3,3]\n",
+    "while l.count(3)>0:# \n",
+    "    l.remove(3)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fee33d6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello\")\n",
+    "while False:\n",
+    "    print(\"HI\")\n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4a752d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"hello\")\n",
+    "while True:\n",
+    "    print(\"HI\")\n",
+    "print(\"Done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "93fb3674",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "hi\n",
+      "1\n",
+      "hi\n",
+      "2\n",
+      "hi\n",
+      "3\n",
+      "hi\n",
+      "4\n",
+      "hi\n",
+      "c= 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=0\n",
+    "while c<5:#0<5: True, 1<5:True\n",
+    "    print(c)\n",
+    "    print(\"hi\")\n",
+    "    c=c+1#1,2\n",
+    "print(\"c=\",c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "76c5a4d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,3,3,4,5,6,3,3,3,3]\n",
+    "while l.count(3)>0:#7>0:True\n",
+    "    l.remove(3)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ee4e63a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__add__', '__class__', '__class_getitem__', '__contains__', '__delattr__', '__delitem__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getstate__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__init_subclass__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__rmul__', '__setattr__', '__setitem__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9fe3c4ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,3,3,4,5,6,3,3,3,3]\n",
+    "k=l\n",
+    "k.clear()\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c79b11aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[\"apple\", \"orange\",\"grapes\"]\n",
+    "l.index(\"grapes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0c199512",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[\"apple\", \"orange\",\"grapes\",\"orange\",\"grapes\"]\n",
+    "l.index(\"grapes\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d4954fd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l.index?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "757e57e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=[\"apple\", \"orange\",\"grapes\",\"orange\",\"grapes\",\"grapes\",\"mango\",\"grapes\"]\n",
+    "l.index(\"grapes\",3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1a8c72b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"apple\", \"orange\",\"grapes\",\"orange\",\"grapes\",\"grapes\",\"mango\",\"grapes\"]\n",
+    "for i in l:\n",
+    "    if i==\"grapes\":\n",
+    "        print(l.index(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "10d01502",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"apple\", \"orange\",\"grapes\",\"orange\",\"grapes\",\"grapes\",\"mango\",\"grapes\"]\n",
+    "ind=0\n",
+    "for i in l:\n",
+    "    if i==\"grapes\":\n",
+    "        ind=l.index(i,ind)\n",
+    "        print(ind)\n",
+    "        ind=ind+1\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "72e139a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"apple\", \"orange\",\"grapes\",\"orange\",\"grapes\",\"grapes\",\"mango\",\"grapes\",\"pineapple\"]\n",
+    "ind=0\n",
+    "for i in l:\n",
+    "    if i==\"grapes\":\n",
+    "        ind=l.index(i,ind)\n",
+    "        print(ind)\n",
+    "        ind=ind+1\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9dbb85d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'APPLE' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m l\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapple\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrapes\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrapes\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrapes\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmango\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrapes\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpineapple\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m l\u001b[38;5;241m.\u001b[39mindex(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAPPLE\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: 'APPLE' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"apple\", \"orange\",\"grapes\",\"orange\",\"grapes\",\"grapes\",\"mango\",\"grapes\",\"pineapple\"]\n",
+    "l.index(\"APPLE\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "739c72e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'orange' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m l\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mapple\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrapes\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrapes\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrapes\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmango\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgrapes\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpineapple\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m l\u001b[38;5;241m.\u001b[39mindex(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124morange\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m4\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: 'orange' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"apple\", \"orange\",\"grapes\",\"orange\",\"grapes\",\"grapes\",\"mango\",\"grapes\",\"pineapple\"]\n",
+    "l.index(\"orange\",4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef43dc0b",
    "metadata": {},
    "outputs": [],
    "source": []
